--- a/android/app/src/main/res/layout/fragment_default_confirm.xml
+++ b/android/app/src/main/res/layout/fragment_default_confirm.xml
@@ -14,7 +14,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:background="@color/white"
         android:padding="30dp">
 
@@ -35,7 +35,7 @@
         <Space
             android:id="@+id/space_emoji_margin"
             android:layout_width="match_parent"
-            android:layout_height="20dp"
+            android:layout_height="12dp"
             android:visibility="@{dialogDefaultUiModel.emoji==null ? View.GONE : View.VISIBLE}"
             app:layout_constraintTop_toBottomOf="@id/tv_dialog_emoji" />
 
@@ -44,6 +44,7 @@
             style="@style/TextView.Esamanru.Medium.20"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:text="@{dialogDefaultUiModel.title}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -52,15 +53,15 @@
 
         <TextView
             android:id="@+id/tv_dialog_message"
-            style="@style/TextView.Pretendard.Medium.16"
+            style="@style/TextView.Pretendard.Medium"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="20dp"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="40dp"
             android:text="@{dialogDefaultUiModel.message}"
             android:textAlignment="center"
             android:textColor="@color/gray700"
+            android:textSize="14sp"
             android:visibility="@{dialogDefaultUiModel.message==null ? View.GONE : View.VISIBLE}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -71,16 +72,13 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/tv_negative_btn"
-            style="@style/Widget.App.Button.Negative.Pretendard.Bold"
+            style="@style/Widget.App.Button.Negative"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
             android:layout_marginEnd="8dp"
-            android:gravity="center"
-            android:paddingHorizontal="40dp"
-            android:paddingVertical="12dp"
             android:text="@{dialogDefaultUiModel.negativeText==null ? @string/all_cancel : dialogDefaultUiModel.negativeText}"
-            android:textColor="@color/gray500"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/tv_positive_btn"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_dialog_message"
@@ -88,15 +86,11 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/tv_positive_btn"
-            style="@style/Widget.App.Button.Positive.Pretendard.Bold"
+            style="@style/Widget.App.Button.Positive"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:gravity="center"
-            android:paddingHorizontal="40dp"
-            android:paddingVertical="12dp"
             android:text="@{dialogDefaultUiModel.positiveText==null ? @string/all_confirm : dialogDefaultUiModel.positiveText}"
-            android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="@id/tv_negative_btn"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/tv_negative_btn"
