--- a/android/app/src/main/res/layout/fragment_edit_nickname_confirm.xml
+++ b/android/app/src/main/res/layout/fragment_edit_nickname_confirm.xml
@@ -36,16 +36,12 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/tv_negative_btn"
-            style="@style/Widget.App.Button.Negative.Pretendard.Bold"
+            style="@style/Widget.App.Button.Negative"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
             android:layout_marginEnd="8dp"
-            android:gravity="center"
-            android:paddingHorizontal="40dp"
-            android:paddingVertical="12dp"
             android:text="@string/all_cancel"
-            android:textColor="@color/gray500"
             app:layout_constraintEnd_toStartOf="@id/tv_positive_btn"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/et_edit_nickname_field"
@@ -53,15 +49,11 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/tv_positive_btn"
-            style="@style/Widget.App.Button.Positive.Pretendard.Bold"
+            style="@style/Widget.App.Button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:gravity="center"
-            android:paddingHorizontal="40dp"
-            android:paddingVertical="12dp"
             android:text="@string/all_confirm"
-            android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="@id/tv_negative_btn"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/tv_negative_btn"
