--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -120,6 +120,10 @@
     <!-- Material Button-->
     <style name="Widget.App.Button" parent="Widget.Material3.Button">
         <item name="cornerRadius">12dp</item>
+        <item name="android:fontFamily">@font/pretendard_semibold</item>
+        <item name="android:gravity">center</item>
+        <item name="android:paddingVertical">12dp</item>
+        <item name="android:textSize">14sp</item>
     </style>
 
     <style name="Widget.App.Button.Positive" parent="Widget.App.Button">
@@ -127,26 +131,9 @@
         <item name="android:textColor">@color/white</item>
     </style>
 
-    <style name="Widget.App.Button.Positive.Pretendard.Bold" parent="Widget.App.Button.Positive">
-        <item name="android:fontFamily">@font/pretendard_bold</item>
-    </style>
-
     <style name="Widget.App.Button.Negative" parent="Widget.App.Button">
         <item name="android:backgroundTint">@color/gray200</item>
-        <item name="android:textColor">@color/black</item>
-    </style>
-
-    <style name="Widget.App.Button.Negative.Pretendard.Bold" parent="Widget.App.Button.Negative">
-        <item name="android:fontFamily">@font/pretendard_bold</item>
-    </style>
-
-    <style name="Widget.App.Button.CancelMembership" parent="Widget.App.Button">
-        <item name="android:backgroundTint">@color/gray100</item>
-        <item name="android:textColor">@color/gray400</item>
-    </style>
-
-    <style name="Widget.App.Button.CancelMembership.Pretendard.Bold" parent="Widget.App.Button.CancelMembership">
-        <item name="android:fontFamily">@font/pretendard_bold</item>
+        <item name="android:textColor">@color/gray500</item>
     </style>
 
 </resources>
