--- a/android/app/src/main/res/layout/fragment_stats_my.xml
+++ b/android/app/src/main/res/layout/fragment_stats_my.xml
@@ -35,14 +35,34 @@
                 android:padding="20dp"
                 app:layout_constraintTop_toTopOf="parent">
 
-                <TextView
-                    android:id="@+id/tv_my_chart_title"
-                    style="@style/TextView.Pretendard.Bold.20"
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/constraint_my_chart"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/stats_my_pie_chart_title"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent">
+
+                    <TextView
+                        android:id="@+id/tv_my_chart_title"
+                        style="@style/TextView.Pretendard.Bold.20"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/stats_my_pie_chart_title"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <ImageView
+                        android:id="@+id/ic_stadium_stats_info"
+                        android:layout_width="14dp"
+                        android:layout_height="14dp"
+                        android:layout_marginStart="4dp"
+                        android:src="@drawable/ic_info"
+                        app:layout_constraintBottom_toBottomOf="@id/tv_my_chart_title"
+                        app:layout_constraintStart_toEndOf="@id/tv_my_chart_title"
+                        app:layout_constraintTop_toTopOf="@id/tv_my_chart_title"
+                        app:tint="@color/gray400" />
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <com.github.mikephil.charting.charts.PieChart
                     android:id="@+id/pie_chart"
@@ -51,7 +71,7 @@
                     android:layout_marginTop="20dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/tv_my_chart_title" />
+                    app:layout_constraintTop_toBottomOf="@id/constraint_my_chart" />
 
                 <TextView
                     android:id="@+id/tv_winning_percentage"
@@ -196,10 +216,10 @@
                     android:id="@+id/constraint_my_team"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@id/divider_my_stats"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toStartOf="@id/divider_my_stats">
+                    app:layout_constraintTop_toTopOf="parent">
 
                     <TextView
                         android:id="@+id/tv_my_team_emoji"
@@ -207,9 +227,9 @@
                         android:layout_height="wrap_content"
                         android:text="@string/stats_my_team_emoji"
                         android:textSize="24sp"
-                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"/>
+                        app:layout_constraintTop_toTopOf="parent" />
 
                     <TextView
                         android:id="@+id/tv_my_team_name"
@@ -218,10 +238,10 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
                         android:text="@{statsMyUiModel.myTeam}"
-                        app:layout_constraintTop_toBottomOf="@id/tv_my_team_emoji"
-                        app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        tools:text="KIA"/>
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/tv_my_team_emoji"
+                        tools:text="KIA" />
 
                     <TextView
                         style="@style/TextView.Pretendard.Regular.12"
@@ -230,9 +250,9 @@
                         android:layout_marginTop="4dp"
                         android:text="@string/stats_my_team"
                         android:textColor="@color/gray500"
-                        app:layout_constraintTop_toBottomOf="@id/tv_my_team_name"
+                        app:layout_constraintEnd_toEndOf="@id/tv_my_team_name"
                         app:layout_constraintStart_toStartOf="@id/tv_my_team_name"
-                        app:layout_constraintEnd_toEndOf="@id/tv_my_team_name"/>
+                        app:layout_constraintTop_toBottomOf="@id/tv_my_team_name" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <com.google.android.material.divider.MaterialDivider
@@ -241,19 +261,19 @@
                     android:layout_height="0dp"
                     android:layout_marginVertical="10dp"
                     app:dividerColor="@color/gray300"
-                    app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@id/constraint_lucky_stadium"
                     app:layout_constraintStart_toEndOf="@id/constraint_my_team"
-                    app:layout_constraintEnd_toStartOf="@id/constraint_lucky_stadium"/>
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/constraint_lucky_stadium"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@id/divider_my_stats"
-                    app:layout_constraintEnd_toEndOf="parent">
+                    app:layout_constraintTop_toTopOf="parent">
 
                     <TextView
                         android:id="@+id/tv_lucky_stadium_emoji"
@@ -261,9 +281,9 @@
                         android:layout_height="wrap_content"
                         android:text="@string/stats_my_lucky_stadium_emoji"
                         android:textSize="24sp"
-                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"/>
+                        app:layout_constraintTop_toTopOf="parent" />
 
                     <TextView
                         android:id="@+id/tv_lucky_stadium_name"
@@ -272,10 +292,10 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
                         android:text="@{statsMyUiModel.luckyStadium != null ? statsMyUiModel.luckyStadium : @string/stats_my_no_lucky_stadium}"
-                        app:layout_constraintTop_toBottomOf="@id/tv_lucky_stadium_emoji"
-                        app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        tools:text="챔피언스필드"/>
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/tv_lucky_stadium_emoji"
+                        tools:text="챔피언스필드" />
 
                     <TextView
                         style="@style/TextView.Pretendard.Regular.12"
@@ -284,9 +304,9 @@
                         android:layout_marginTop="4dp"
                         android:text="@string/stats_my_lucky_stadium"
                         android:textColor="@color/gray500"
-                        app:layout_constraintTop_toBottomOf="@id/tv_lucky_stadium_name"
+                        app:layout_constraintEnd_toEndOf="@id/tv_lucky_stadium_name"
                         app:layout_constraintStart_toStartOf="@id/tv_lucky_stadium_name"
-                        app:layout_constraintEnd_toEndOf="@id/tv_lucky_stadium_name"/>
+                        app:layout_constraintTop_toBottomOf="@id/tv_lucky_stadium_name" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
