--- a/android/app/src/main/res/layout/fragment_stats_detail.xml
+++ b/android/app/src/main/res/layout/fragment_stats_detail.xml
@@ -11,6 +11,7 @@
     </data>
 
     <androidx.core.widget.NestedScrollView
+        android:id="@+id/nsv_root"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scrollbars="none"
