--- a/android/app/src/main/res/layout/fragment_stats_my.xml
+++ b/android/app/src/main/res/layout/fragment_stats_my.xml
@@ -15,6 +15,7 @@
     </data>
 
     <ScrollView
+        android:id="@+id/sv_root"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scrollbars="none"
