--- a/android/app/src/main/res/layout/activity_main.xml
+++ b/android/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                app:contentInsetEnd="30dp"
+                app:contentInsetEnd="22dp"
                 app:contentInsetStart="30dp"
                 app:layout_constraintTop_toTopOf="parent">
 
@@ -31,22 +31,33 @@
 
                 <ImageView
                     android:id="@+id/iv_settings"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
                     android:layout_gravity="center_vertical|end"
-                    android:layout_marginStart="16dp"
                     android:background="?attr/selectableItemBackgroundBorderless"
                     android:contentDescription="@string/setting_icon_description"
+                    android:padding="8dp"
                     android:src="@drawable/ic_settings" />
 
                 <ImageView
                     android:id="@+id/iv_badge"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
                     android:layout_gravity="center_vertical|end"
                     android:background="?attr/selectableItemBackgroundBorderless"
                     android:contentDescription="@string/badge_icon_description"
+                    android:padding="8dp"
                     android:src="@drawable/ic_trophy" />
+
+                <ImageView
+                    android:id="@+id/iv_add_past_check_in"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center_vertical|end"
+                    android:background="?attr/selectableItemBackgroundBorderless"
+                    android:contentDescription="@string/past_check_in_top_bar_add_btn"
+                    android:padding="8dp"
+                    android:src="@drawable/ic_add_check_in" />
             </androidx.appcompat.widget.Toolbar>
 
             <androidx.fragment.app.FragmentContainerView
