--- a/android/app/src/main/res/layout/activity_main.xml
+++ b/android/app/src/main/res/layout/activity_main.xml
@@ -31,32 +31,35 @@
 
                 <ImageView
                     android:id="@+id/iv_settings"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
+                    android:layout_width="32dp"
+                    android:layout_height="32dp"
                     android:layout_gravity="center_vertical|end"
+                    android:layout_marginHorizontal="6dp"
                     android:background="?attr/selectableItemBackgroundBorderless"
                     android:contentDescription="@string/setting_icon_description"
-                    android:padding="8dp"
+                    android:padding="4dp"
                     android:src="@drawable/ic_settings" />
 
                 <ImageView
                     android:id="@+id/iv_badge"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
+                    android:layout_width="32dp"
+                    android:layout_height="32dp"
                     android:layout_gravity="center_vertical|end"
+                    android:layout_marginStart="6dp"
                     android:background="?attr/selectableItemBackgroundBorderless"
                     android:contentDescription="@string/badge_icon_description"
-                    android:padding="8dp"
+                    android:padding="4dp"
                     android:src="@drawable/ic_trophy" />
 
                 <ImageView
                     android:id="@+id/iv_add_past_check_in"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
+                    android:layout_width="32dp"
+                    android:layout_height="32dp"
                     android:layout_gravity="center_vertical|end"
+                    android:layout_marginStart="6dp"
                     android:background="?attr/selectableItemBackgroundBorderless"
                     android:contentDescription="@string/past_check_in_top_bar_add_btn"
-                    android:padding="8dp"
+                    android:padding="4dp"
                     android:src="@drawable/ic_add_check_in" />
             </androidx.appcompat.widget.Toolbar>
 
